--- a/css/style.css
+++ b/css/style.css
@@ -641,10 +641,37 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   left: 0;
   width: 100%;
   height: 100%;
+  background: rgba(46, 47, 66, 0.4); 
 }
 .modal {
+  position: absolute; 
+  width: 408px;
+height: 576px;
+left: 516px;
+top: 88px;
+ background: var(--color-dairy);
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
 }
 .modal-close-btn {
+ position: absolute;
+
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ padding: 0;
+width: 24px;
+height: 24px;
+border-radius: 50%;
+border: none;
+
 }
 .modal-icon {
+ fill: black;
+ position: absolute;
+left: 33.33%;
+right: 33.33%;
+top: 33.33%;
+bottom: 33.33%;
 }
+ 
