--- a/css/style.css
+++ b/css/style.css
@@ -643,10 +643,16 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   height: 100%;
   background: rgba(46, 47, 66, 0.4); 
 }
+.backdrop.is-hiden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition-delay: 600ms;
+}
 .modal {
   position: absolute; 
   width: 408px;
-height: 576px;
+min-height: 576px;
 left: 516px;
 top: 88px;
  background: var(--color-dairy);
@@ -655,23 +661,34 @@ border-radius: 4px;
 }
 .modal-close-btn {
  position: absolute;
-
+width: 24px;
+height: 24px;
+top: 24px;
+right: 24px;
+left: 360px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
-width: 24px;
-height: 24px;
+border: 1px solid rgba(0, 0, 0, 0.1);
 border-radius: 50%;
-border: none;
-
+ color: var(--color-navy-blue);
+ background-color: var(--color-cornflower);
+ transition: background-color 250ms cubic-bezier(0.4,0,0.2,1),
+ border 250ms cubic-bezier(0.4,0,0.2,1)
+ 
 }
 .modal-icon {
- fill: black;
- position: absolute;
-left: 33.33%;
-right: 33.33%;
-top: 33.33%;
-bottom: 33.33%;
+fill: currentColor;
+transition: fill 250ms cubic-bezier(0.4,0,0.2,1);
 }
- 
+.modal-close-btn:hover {
+background-color: var(--color-ocean);
+color: var(--color-white);
+border: none;
+}
+.modal-close-btn:focus {
+background-color: var(--color-ocean);
+color: var(--color-white);
+border: none;
+}
