--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,10 @@ img {
 .header-link-menu.active::after{
   background-color: var(--color-ocean);
 }
+.active {
+  position: relative;
+  color: var(--color-ocean); 
+}
 
 .address {
   font-style: normal;
@@ -250,7 +254,7 @@ img {
   margin-bottom: 8px;
 }
 .feature-icons-blok {
-  outline: 2px solid red;
+
 
   height: 112px;
   display: flex;
@@ -619,6 +623,29 @@ height: 40px;
   border: 1px solid var(--color-cornflower);
   border-top: none;
 }
+.team-thumb {
+  position:relative;
+
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--color-ocean);
+  width: 100%;
+height: 100%;
+}
+.overlay-text {
+color: var(--color-cloud);
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+padding-top: 40px;
+padding-left: 32px;
+
+
+}
 .portfolio-link {
   display: block;
    box-shadow: box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -636,6 +663,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   |============================
 */
 .backdrop {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
