--- a/css/style.css
+++ b/css/style.css
@@ -88,10 +88,7 @@ img {
   align-items: center;
   gap: 40px;
   padding: 24px 0;
-  
 }
-
-
 
 .header-link-menu:hover {
   color: var(--color-ocean);
@@ -100,35 +97,29 @@ img {
   color: var(--color-ocean);
 }
 .header-link {
-  
-
 }
 .header-link-menu {
   position: relative;
   padding: 24px 0;
-
-
 }
 
 .header-link-menu::after {
- content: '';
+  content: "";
   position: absolute;
   left: 0;
   bottom: -1px;
- display: block;
+  display: block;
   width: 100%;
   height: 4px;
-  
- 
-  border-radius: 2px;
 
+  border-radius: 2px;
 }
-.header-link-menu.active::after{
+.header-link-menu.active::after {
   background-color: var(--color-ocean);
 }
 .active {
   position: relative;
-  color: var(--color-ocean); 
+  color: var(--color-ocean);
 }
 
 .address {
@@ -254,8 +245,6 @@ img {
   margin-bottom: 8px;
 }
 .feature-icons-blok {
-
-
   height: 112px;
   display: flex;
   align-items: center;
@@ -432,10 +421,9 @@ img {
 }
 .customers-link:focus {
   border-color: var(--color-ocean);
- 
 }
 .customers-link:hover {
- color: var(--color-ocean);
+  color: var(--color-ocean);
 }
 .customers-link:focus {
   color: var(--color-ocean);
@@ -446,15 +434,12 @@ img {
   |============================
 */
 .footer-box {
-   display: flex;
+  display: flex;
   align-items: baseline;
 }
 .footer-logo-box {
   display: inline-block;
-   gap: 120px;
-  
-  
-
+  gap: 120px;
 }
 .footer {
   background-color: var(--color-navy-blue);
@@ -467,7 +452,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
- margin-right: 120px
+  margin-right: 120px;
 }
 .studio-footer {
   font-family: "Raleway", sans-serif;
@@ -494,8 +479,6 @@ img {
 }
 
 .footer-social {
-
-
 }
 
 .footer-list {
@@ -504,12 +487,12 @@ img {
 }
 
 .footer-socials-item {
-  width: 40px; 
-height: 40px; 
+  width: 40px;
+  height: 40px;
 }
 .footer-link {
-width: 40px; 
-height: 40px; 
+  width: 40px;
+  height: 40px;
   background-color: var(--color-iris);
   display: flex;
   justify-content: center;
@@ -518,7 +501,6 @@ height: 40px;
   color: var(--color-cloud);
 }
 .footer-text {
-  
   margin-bottom: 16px;
   font-weight: 500;
   font-size: 16px;
@@ -527,7 +509,6 @@ height: 40px;
   color: #ffffff;
   margin-bottom: 16px;
   margin-top: 0px;
-  
 }
 .socials-icons-footer {
   fill: currentColor;
@@ -575,7 +556,8 @@ height: 40px;
   color: var(--color-white);
   background-color: var(--color-ocean);
   border: 1px solid transparent;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); 
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /**
@@ -624,8 +606,7 @@ height: 40px;
   border-top: none;
 }
 .team-thumb {
-  position:relative;
-
+  position: relative;
 }
 .overlay {
   position: absolute;
@@ -633,30 +614,37 @@ height: 40px;
   left: 0;
   background-color: var(--color-ocean);
   width: 100%;
-height: 100%;
+  height: 100%;
 }
 .overlay-text {
-color: var(--color-cloud);
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5; 
-letter-spacing: 0.02em;
-padding-top: 40px;
-padding-left: 32px;
+  color: var(--color-cloud);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding-top: 40px;
+  padding-left: 32px;
 
-
+  transform: translatex(-100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-link {
+.overlay:hover .overlay-text,
+.overlay:focus .overlay-text .portfolio-link {
   display: block;
-   box-shadow: box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-.portfolio-link:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+.portfolio-link:hover .overlay-text {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
+}
+.portfolio-link:focus .overlay-text {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  transform: translateY(0%);
+}
 
-}
-.portfolio-link:focus {
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
 /**
   |============================
   |Modal window
@@ -669,7 +657,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(46, 47, 66, 0.4); 
+  background: rgba(46, 47, 66, 0.4);
 }
 .backdrop.is-hiden {
   opacity: 0;
@@ -678,45 +666,45 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
   transition-delay: 600ms;
 }
 .modal {
-  position: absolute; 
+  position: absolute;
   width: 408px;
-min-height: 576px;
-left: 516px;
-top: 88px;
- background: var(--color-dairy);
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
-border-radius: 4px;
+  min-height: 576px;
+  left: 516px;
+  top: 88px;
+  background: var(--color-dairy);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 .modal-close-btn {
- position: absolute;
-width: 24px;
-height: 24px;
-top: 24px;
-right: 24px;
-left: 360px;
- display: flex;
- align-items: center;
- justify-content: center;
- padding: 0;
-border: 1px solid rgba(0, 0, 0, 0.1);
-border-radius: 50%;
- color: var(--color-navy-blue);
- background-color: var(--color-cornflower);
- transition: background-color 250ms cubic-bezier(0.4,0,0.2,1),
- border 250ms cubic-bezier(0.4,0,0.2,1)
- 
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 24px;
+  right: 24px;
+  left: 360px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  color: var(--color-navy-blue);
+  background-color: var(--color-cornflower);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-icon {
-fill: currentColor;
-transition: fill 250ms cubic-bezier(0.4,0,0.2,1);
+  fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn:hover {
-background-color: var(--color-ocean);
-color: var(--color-white);
-border: none;
+  background-color: var(--color-ocean);
+  color: var(--color-white);
+  border: none;
 }
 .modal-close-btn:focus {
-background-color: var(--color-ocean);
-color: var(--color-white);
-border: none;
+  background-color: var(--color-ocean);
+  color: var(--color-white);
+  border: none;
 }
