--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
   --color-green: #31d0aa;
   --color-grey: rgba(46, 47, 66, 0.7);
   --color-navy-blue-modal: rgba(46, 47, 66, 0.4);
+  --function-durection: 250mc cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -32,7 +33,12 @@ img {
   padding: 0;
   margin: 0;
 }
-
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
 .container {
   width: 1158px;
   margin: 0 auto;
@@ -90,17 +96,15 @@ img {
   padding: 24px 0;
 }
 
-.header-link-menu:hover {
-  color: var(--color-ocean);
-}
+.header-link-menu:hover,
 .header-link-menu:focus {
   color: var(--color-ocean);
 }
-.header-link {
-}
+
 .header-link-menu {
   position: relative;
   padding: 24px 0;
+  transition: color var(--function-durection);
 }
 
 .header-link-menu::after {
@@ -126,26 +130,26 @@ img {
   font-style: normal;
   margin-left: auto;
 }
-.address-link:hover {
-  color: var(--color-ocean);
-}
+.address-link:hover,
 .address-link:focus {
   color: var(--color-ocean);
 }
+
 .list-address {
   display: flex;
   align-items: center;
   gap: 40px;
-  padding: 24px 0;
 }
 
 .address-link {
+  display: block;
   color: var(--color-slate);
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-decoration: none;
+  transition: color var(--function-durection);
+  padding: 24px 0px;
 }
 
 /**
@@ -180,10 +184,10 @@ img {
   background-size: cover;
   background-position: center;
   max-width: 1440px;
+  margin: 0 auto;
 }
 
 .buton-hero {
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   cursor: pointer;
   color: var(--color-white);
@@ -195,21 +199,19 @@ img {
   font-family: inherit;
   border-radius: 4px;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
-
   height: 56px;
   margin: 0 auto;
   display: block;
-  padding: 24px 0;
   border: none;
   min-width: 169px;
+  transition: background-color var(--function-durection);
 }
 
-.buton-hero:hover {
-  background-color: var(--color-ocean);
-}
+.buton-hero:hover,
 .buton-hero:focus {
   background-color: var(--color-ocean);
 }
+
 /**
   |============================
   | Section Feature 2
@@ -268,9 +270,7 @@ img {
 
 .image-title {
   color: var(--color-navy-blue);
-  font-weight: 500;
   font-size: 36px;
-  line-height: 1.1;
   letter-spacing: 0.02em;
   line-height: 1.11;
   text-align: center;
@@ -309,7 +309,6 @@ img {
 
 .team-section-title {
   color: var(--color-navy-blue);
-  font-weight: 500;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
@@ -329,7 +328,7 @@ img {
 }
 .team-text {
   color: var(--color-slate);
-  font-weight: 400;
+  margin-bottom: 8px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -357,15 +356,14 @@ img {
   align-items: center;
   border-radius: 50%;
   color: var(--color-cloud);
+  transition: background-color var(--function-durection);
 }
 .socials-icons {
   fill: currentColor;
   fill: var(--color-cloud);
 }
 
-.socials-link:hover {
-  background-color: var(--color-ocean);
-}
+.socials-link:hover,
 .socials-link:focus {
   background-color: var(--color-ocean);
 }
@@ -411,23 +409,19 @@ img {
   height: 100%;
   width: 100%;
   color: var(--color-light-slate);
+  transition: border-color var(--function-durection),
+    color var(--function-durection);
 }
 
 .customers-icon {
   fill: currentColor;
 }
-.customers-link:hover {
-  border-color: var(--color-ocean);
-}
+.customers-link:hover,
 .customers-link:focus {
   border-color: var(--color-ocean);
-}
-.customers-link:hover {
   color: var(--color-ocean);
 }
-.customers-link:focus {
-  color: var(--color-ocean);
-}
+
 /**
   |============================
   | Footer
@@ -478,9 +472,6 @@ img {
   margin-bottom: 16px;
 }
 
-.footer-social {
-}
-
 .footer-list {
   display: flex;
   gap: 16px;
@@ -499,6 +490,7 @@ img {
   align-items: center;
   border-radius: 50%;
   color: var(--color-cloud);
+  transition: background-color var(--function-durection);
 }
 .footer-text {
   margin-bottom: 16px;
@@ -513,12 +505,11 @@ img {
 .socials-icons-footer {
   fill: currentColor;
 }
-.footer-link:hover {
-  background-color: #31d0aa;
-}
+.footer-link:hover,
 .footer-link:focus {
   background-color: #31d0aa;
 }
+
 /**
   |============================
   | Button
@@ -547,8 +538,9 @@ img {
   padding: 12px 24px;
   border: 1px solid var(--color-cornflower);
   border-radius: 4px;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: color var(--function-durection),
+    background-color var(--function-durection),
+    border-color var(--function-durection), box-shadow var(--function-durection);
 }
 
 .about-buton:hover,
@@ -577,37 +569,28 @@ img {
 
 .services-card {
   width: calc((100% - 48px) / 3);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .title-portfolio {
   color: var(--color-navy-blue);
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
   margin-bottom: 8px;
 }
 .text-portfolio {
   color: var(--color-slate);
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  text-align: center;
 }
 .text-card {
   padding: 32px 16px;
   border: 1px solid var(--color-cornflower);
   border-top: none;
 }
-.team-thumb {
-  position: relative;
-}
+
 .overlay {
   position: absolute;
   top: 0;
@@ -616,19 +599,38 @@ img {
   width: 100%;
   height: 100%;
 }
+.overlay {
+  position: relative;
+  overflow: hidden;
+}
 .overlay-text {
+  position: absolute;
+  top: 0;
+  padding: 40px 32px;
   color: var(--color-cloud);
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding-top: 40px;
-  padding-left: 32px;
-
-  transform: translatex(-100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  height: 100%;
+  background-color: var(--color-iris);
+  transform: translateY(100%);
+  /* transition: transform var(--function-durection); */
+  transition: transform var(--function-durection);
 }
-.overlay:hover .overlay-text,
+.portfolio-link {
+  display: block;
+  transition: box-shadow var(--function-durection);
+}
+.portfolio-link:hover,
+.portfolio-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.portfolio-link:hover .overlay-text,
+.portfolio-link:focus .overlay-text {
+  transform: translateY(0%);
+}
+/* .overlay:hover .overlay-text,
 .overlay:focus .overlay-text .portfolio-link {
   display: block;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
@@ -643,7 +645,7 @@ img {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   transform: translateY(0%);
-}
+} */
 
 /**
   |============================
@@ -651,30 +653,32 @@ img {
   |============================
 */
 .backdrop {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(46, 47, 66, 0.4);
+  transition: opcity var(--function-durection),
+    visibility var(--function-durection);
 }
-.backdrop.is-hiden {
+.backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition-delay: 600ms;
 }
 .modal {
   position: absolute;
   width: 408px;
   min-height: 576px;
-  left: 516px;
-  top: 88px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
   background: var(--color-dairy);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  transition: transform var(--function-durection);
 }
 .modal-close-btn {
   position: absolute;
@@ -682,7 +686,6 @@ img {
   height: 24px;
   top: 24px;
   right: 24px;
-  left: 360px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -698,11 +701,7 @@ img {
   fill: currentColor;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-close-btn:hover {
-  background-color: var(--color-ocean);
-  color: var(--color-white);
-  border: none;
-}
+.modal-close-btn:hover,
 .modal-close-btn:focus {
   background-color: var(--color-ocean);
   color: var(--color-white);
