--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   --color-green: #31d0aa;
   --color-grey: rgba(46, 47, 66, 0.7);
   --color-navy-blue-modal: rgba(46, 47, 66, 0.4);
-  --function-durection: 250mc cubic-bezier(0.4, 0, 0.2, 1);
+  --function-durection: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
