--- a/css/style.css
+++ b/css/style.css
@@ -659,7 +659,7 @@ p {
   width: 100%;
   height: 100%;
   background: rgba(46, 47, 66, 0.4);
-  transition: opcity var(--function-durection),
+  transition: opacity var(--function-durection),
     visibility var(--function-durection);
 }
 .backdrop.is-hidden {
@@ -696,6 +696,7 @@ p {
   background-color: var(--color-cornflower);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 .modal-icon {
   fill: currentColor;
